--- a/src/pages/chat-groups/chat-groups.html
+++ b/src/pages/chat-groups/chat-groups.html
@@ -3,7 +3,12 @@
       <button ion-button icon-only menuToggle>
           <ion-icon name="ios-menu-outline"></ion-icon>
         </button>
-    <ion-title>chat-groups</ion-title>
+    <ion-title>Chat Groups</ion-title>
+    <ion-buttons end>
+        <button ion-button icon-only (click)="openModal()">
+            <ion-icon ios="ios-add-circle" md="md-add-circle"></ion-icon>
+        </button>
+      </ion-buttons>
   </ion-navbar>
 </ion-header>
 
