--- a/src/pages/bookie-offer/bookie-offer.html
+++ b/src/pages/bookie-offer/bookie-offer.html
@@ -9,6 +9,13 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content class="card-background-page" no-padding>
+
+  <div *ngFor="let post of posts">
+    <ion-card>
+      <img src="{{post.image}}"/>
+      <div class="card-title">{{post.title}}</div>
+    </ion-card>
+  </div>
 
 </ion-content>
