--- a/src/pages/faq/faq.html
+++ b/src/pages/faq/faq.html
@@ -7,7 +7,22 @@
   </ion-navbar>
 </ion-header>
 
-
 <ion-content padding>
+    <!-- <accordion-list *ngFor="let item of items; let index = index"
+                    [title]="item.name"
+                    textColor="#FFF"
+                    hasMargin="false"
+                    headerColor="#F53D3D"
+                    [expanded]="index === 0">
+      <img [src]="item.imageUrl">
+      <p text-wrap>{{item.description}}</p>
+    </accordion-list> -->
+  
 
-</ion-content>
+      <ion-list>
+          <ion-item *ngFor="let item of items">
+              {{ item.name }}
+            <ion-icon name="ios-arrow-forward-outline" item-end></ion-icon>
+          </ion-item>
+        </ion-list>
+  </ion-content>
