--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -65,12 +65,12 @@
         <ion-slide class="swiper-no-swiping">
           <div style="padding: 20% 32px 32px 32px">
             <ion-item>
-              <ion-label floating>Username</ion-label>
-              <ion-input type="text"></ion-input>
+              <ion-label floating>Email</ion-label>
+              <ion-input type="text" [(ngModel)]="email"></ion-input>
             </ion-item>
             <ion-item>
               <ion-label floating>Password</ion-label>
-              <ion-input type="password"></ion-input>
+              <ion-input type="password" [(ngModel)]="password"></ion-input>
             </ion-item>
             <button style="margin-top: 32px;" ion-button block round (click)="login()" color="light" class="login-button">Login</button>
             <button ion-button clear (click)="slideNext()" color="light" class="forgot-button">FORGOT PASSWORD?</button>
@@ -96,16 +96,20 @@
       </button>
       <div style="padding: 32px">
         <ion-item>
+          <ion-label floating>Email</ion-label>
+          <ion-input type="text"  [(ngModel)]="email"></ion-input>
+        </ion-item>
+        <ion-item>
           <ion-label floating>Username</ion-label>
-          <ion-input type="text"></ion-input>
+          <ion-input type="text"  [(ngModel)]="nickname"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label floating>Password</ion-label>
-          <ion-input type="password"></ion-input>
+          <ion-input type="password" [(ngModel)]="password"></ion-input>
         </ion-item>
         <ion-item class="margin-bottom">
           <ion-label floating>Confirm Password</ion-label>
-          <ion-input type="password"></ion-input>
+          <ion-input type="password" [(ngModel)]="conpassword"></ion-input>
         </ion-item>
         <button style="margin-top: 32px;" ion-button block round (click)="signup()" color="light" class="login-button">SIGN UP</button>
       </div>
