--- a/src/pages/chat-groups/chat-groups.html
+++ b/src/pages/chat-groups/chat-groups.html
@@ -5,17 +5,17 @@
         </button>
     <ion-title>Chat Groups</ion-title>
     <ion-buttons end>
-        <button ion-button icon-only (click)="openModal()">
-            <ion-icon ios="ios-add-circle" md="md-add-circle"></ion-icon>
-        </button>
-      </ion-buttons>
+      <button ion-button icon-only (click)="addRoom()">
+        <ion-icon name="add-circle"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 
 <ion-content>
   
-    <ion-list>
+    <!-- <ion-list>
         <ion-item *ngFor="let chat of chats" (click)="viewMessages(chat)">
           <ion-avatar item-start>
             <img [src]="chat.imageUrl">
@@ -23,6 +23,14 @@
           <h2>{{chat.title}}</h2>
           <p>{{chat.lastMessage}}</p>
         </ion-item>
+      </ion-list> -->
+
+      <ion-list>
+        <ion-item *ngFor="let room of rooms">  <!--/roomname-->
+          {{room.roomname}}
+          <ion-icon name="chatboxes" item-end (click)="joinRoom(room.key, room.roomname)"></ion-icon>
+        </ion-item>
       </ion-list>
+
 
 </ion-content>
