--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -1,5 +1,10 @@
 <ion-header>
   <ion-navbar>
+    <ion-buttons start>
+      <button ion-button icon-only style="color:black" (click)="what()">
+        <ion-icon name="attach"></ion-icon>
+      </button>
+    </ion-buttons>
     <ion-title>
       {{roomname}}
     </ion-title>
@@ -14,6 +19,7 @@
 <ion-content>
   <ion-list>
     <ion-item *ngFor="let chat of chats" no-lines>
+
       <div class="chat-status" text-center *ngIf="chat.type==='join'||chat.type==='exit';else message">
         <span class="chat-date">{{chat.sendDate | date:'short'}}</span>
         <span class="chat-content-center">{{chat.message}}</span>
@@ -23,14 +29,50 @@
           <div class="right-bubble">
             <span class="msg-name">Me</span>
             <span class="msg-date">{{chat.sendDate | date:'short'}}</span>
-            <p text-wrap>{{chat.message}}</p>
+            <p *ngIf="!chat.voice" text-wrap>{{chat.message}}</p>
+           
+            <div *ngIf="chat.voice">
+
+              <div align="left">
+              <ion-buttons start>
+                <button ion-button icon-only style="color:black" (click)="play(chat.voice)">
+                  <ion-icon name="play"></ion-icon>
+                </button>
+              </ion-buttons>
+              </div>
+              <ion-buttons end style="margin-top: -43px;">
+                <button ion-button icon-only style="color:black" (click)="pause(chat.voice)">
+                  <ion-icon name="pause"></ion-icon>
+                </button>
+              </ion-buttons>
+
+            </div>
+
           </div>
         </div>
         <div class="chat-message" text-left *ngIf="chat.user !== nickname">
           <div class="left-bubble">
             <span class="msg-name">{{chat.user}}</span>
             <span class="msg-date">{{chat.sendDate | date:'short'}}</span>
-            <p text-wrap>{{chat.message}}</p>
+            <p *ngIf="!chat.voice" text-wrap>{{chat.message}}</p>
+            
+            <div *ngIf="chat.voice">
+
+                <div align="left">
+                <ion-buttons start>
+                  <button ion-button icon-only style="color:black" (click)="play(chat.voice)">
+                    <ion-icon name="play"></ion-icon>
+                  </button>
+                </ion-buttons>
+                </div>
+                <ion-buttons end style="margin-top: -43px;">
+                  <button ion-button icon-only style="color:black" (click)="pause(chat.voice)">
+                    <ion-icon name="pause"></ion-icon>
+                  </button>
+                </ion-buttons>
+  
+              </div>
+
           </div>
         </div>
       </ng-template>
@@ -40,12 +82,28 @@
 <ion-footer>
   <ion-grid>
     <ion-row>
-      <ion-col col-10>
+
+      <ion-col col-2>
+        <div *ngIf="!data.message">
+          <!-- <ion-icon *ngIf="mike_value" style="color:red" name="ios-microphone" (click)="stopRecord()"></ion-icon> -->
+          <ion-icon style="color:green" name="ios-microphone" (click)="uploadAudiotoFirebase()"></ion-icon>
+        </div>
+      </ion-col>
+
+      <ion-col col-8 style="background-color: gainsboro;border-radius: 12px 12px;">
         <ion-input type="text" placeholder="Type a message" [(ngModel)]="data.message" name="message"></ion-input>
       </ion-col>
-      <ion-col col-2 (click)="sendMessage()">
-        <ion-icon name="paper-plane"></ion-icon>
+
+      <ion-col col-2>
+        <ion-icon *ngIf="data.message" name="paper-plane" (click)="sendMessage()"></ion-icon>
       </ion-col>
+
+      <!-- <ion-col col-2  *ngIf="!data.message" style="margin-left: 55px;"> 
+        <ion-icon *ngIf="mike_value === '1'" style="color:red" name="ios-microphone" (click)="stopRecord()"></ion-icon>
+        <ion-icon *ngIf="mike_value === '0'"  style="color:green" name="ios-microphone" (click)="sendVoicenote()"></ion-icon>
+      </ion-col> -->
+
+
     </ion-row>
   </ion-grid>
 </ion-footer>
