--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -9,7 +9,7 @@
       {{roomname}}
     </ion-title>
     <ion-buttons end>
-      <button ion-button icon-only style="color:red" (click)="exitChat()">
+      <button ion-button icon-only style="color:red" (click)="getData()"> <!--  exitChat()-->
         <ion-icon name="exit"></ion-icon>
       </button>
     </ion-buttons>
