--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -33,5 +33,7 @@
           </ion-row>
         </ion-grid>
   </div>
+
+  <!-- <p>Username: {{(profileData | async)?.username }}</p> -->
       
     </ion-content>
