--- a/src/pages/chat-groups/chat-groups.html
+++ b/src/pages/chat-groups/chat-groups.html
@@ -14,23 +14,20 @@
 
 
 <ion-content>
-  
-    <!-- <ion-list>
-        <ion-item *ngFor="let chat of chats" (click)="viewMessages(chat)">
-          <ion-avatar item-start>
-            <img [src]="chat.imageUrl">
-          </ion-avatar>
-          <h2>{{chat.title}}</h2>
-          <p>{{chat.lastMessage}}</p>
-        </ion-item>
-      </ion-list> -->
 
-      <ion-list>
+       <ion-item-group>
+        <ion-item-divider color="light">User Created</ion-item-divider>
         <ion-item *ngFor="let room of rooms">  <!--/roomname-->
           {{room.roomname}}
           <ion-icon name="chatboxes" item-end (click)="joinRoom(room.key, room.roomname)"></ion-icon>
         </ion-item>
-      </ion-list>
+ 
+        <ion-item-divider color="light"><b>Admin Created</b></ion-item-divider> 
+        <ion-item *ngFor="let addroom of adminRooms">  <!--/roomname-->
+          {{addroom.roomname}}
+          <ion-icon name="chatboxes" style="color:blueviolet" item-end (click)="viewchat(addroom.key,addroom.roomname)"></ion-icon>
+        </ion-item>
+       </ion-item-group>
 
 
 </ion-content>
