--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -99,10 +99,10 @@
           <ion-label floating>Email</ion-label>
           <ion-input type="text" [(ngModel)]="email"></ion-input>
         </ion-item>
-        <ion-item>
+        <!-- <ion-item>
           <ion-label floating>Username</ion-label>
           <ion-input type="text"  [(ngModel)]="nickname"></ion-input>
-        </ion-item>
+        </ion-item> -->
         <ion-item>
           <ion-label floating>Password</ion-label>
           <ion-input type="password" [(ngModel)]="password"></ion-input>
