--- a/src/pages/chat-groups/chat-groups.html
+++ b/src/pages/chat-groups/chat-groups.html
@@ -22,11 +22,11 @@
           <ion-icon name="chatboxes" item-end (click)="joinRoom(room.key, room.roomname)"></ion-icon>
         </ion-item>
  
-        <ion-item-divider color="light"><b>Admin Created</b></ion-item-divider> 
-        <ion-item *ngFor="let addroom of adminRooms">  <!--/roomname-->
+        <!-- <ion-item-divider color="light"><b>Admin Created</b></ion-item-divider> 
+        <ion-item *ngFor="let addroom of adminRooms">  <!--/Admin roomname
           {{addroom.roomname}}
           <ion-icon name="chatboxes" style="color:blueviolet" item-end (click)="viewchat(addroom.key,addroom.roomname)"></ion-icon>
-        </ion-item>
+        </ion-item> -->
        </ion-item-group>
 
 
