--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,7 +3,7 @@
         <div class="card-profile_visual"></div>
         <div class="card-profile_user-infos">
           <span class="infos_name">{{user.name}}</span>
-          <span class="infos_nick">{{user.twitter}}</span>
+          <span class="infos_nick">@{{nickname}}</span>
           <a href="#"></a>
         </div>
         <div style="margin-top: -30px;" class="card-profile_user-stats">
@@ -19,7 +19,6 @@
           </div>
         </div>
      
-        <!--Grid View Icons-->
       <ion-grid>
           <ion-row>
             <ion-col *ngFor="let post of posts, let i = index" col-6>
@@ -34,6 +33,4 @@
         </ion-grid>
   </div>
 
-  <!-- <p>Username: {{(profileData | async)?.username }}</p> -->
-      
     </ion-content>
