--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,7 +10,7 @@
           <div class="stats-holder">
             <div class="user-stats">
               <strong>Chat Groups</strong>
-              <span>{{user.tweets}}</span>
+              <span>{{chatboxes}}</span>
             </div>
             <div class="user-stats">
               <strong>Subscribers</strong>
