--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -43,6 +43,11 @@
       </ion-item>
 
       <ion-item>
+        <ion-label floating>Name</ion-label>
+        <ion-input type="text" [(ngModel)]="name"></ion-input>
+      </ion-item>
+
+      <ion-item>
         <ion-label floating>Password</ion-label>
         <ion-input type="password" [(ngModel)]="password"></ion-input>
       </ion-item>
