--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -24,7 +24,7 @@
     </ion-list>
 
     <div align="center">
-    <button ion-button round full style="width:75%" (click)="login()">Login</button>
+    <button ion-button round full style="width:75%" (click)="firebase_login()">Login</button>
   </div>
 
   <div align="center" (click)="registerpage()">
