--- a/src/pages/chatsettings/chatsettings.html
+++ b/src/pages/chatsettings/chatsettings.html
@@ -8,7 +8,13 @@
   </ion-header>
 
 
-<ion-content padding>
+<ion-content>
+
+  <div class="card-background-page">
+      <ion-card>
+        <img src="{{room_image}}"/>
+      </ion-card>
+    </div>
 
   <ion-list>
 
