--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,17 +4,17 @@
         <div class="card-profile_user-infos">
           <span class="infos_name">{{user.name}}</span>
           <span class="infos_nick">@{{nickname}}</span>
-          <a href="#"></a>
+          <a href="#" (click)="editprofile()"></a>
         </div>
         <div style="margin-top: -30px;" class="card-profile_user-stats">
           <div class="stats-holder">
-            <div class="user-stats">
-              <strong>Chat Groups</strong>
-              <span>{{chatboxes}}</span>
+            <div  class="user-stats">
+              <strong></strong>
+              <span></span>
             </div>
             <div class="user-stats">
-              <strong>Subscribers</strong>
-              <span>{{user.followers}}</span>
+              <strong></strong>
+              <span></span>
             </div>
           </div>
         </div>
