--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -3,7 +3,7 @@
   <div *ngIf="value === 1 || value === '1'">
 
     <div align="center">
-      <img src="imgs/logo.png" style="width:55%"/>
+      <img src="imgs/logo.PNG" style="width:55%"/>
     </div>
 
     <ion-list style="margin-top:15px;padding-left:10px;padding-right:10px">
