--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -40,7 +40,7 @@
 </ion-content>
 
 <ion-footer style="background-color:#ae3160">
-  <div align="center">
+  <div align="center" (click)="logout()">
     <p style="color:white">LOGOUT</p>
   </div>
 </ion-footer>
