--- a/src/pages/chat-groups/chat-groups.html
+++ b/src/pages/chat-groups/chat-groups.html
@@ -3,7 +3,7 @@
       <button ion-button icon-only menuToggle>
           <ion-icon name="ios-menu-outline"></ion-icon>
         </button>
-    <ion-title>Premium Tips</ion-title>
+        <ion-title><div align="center"><p style="margin-left:-25px">Premium Tips</p></div></ion-title>
     <!-- <ion-buttons end>
       <button ion-button icon-only (click)="addRoom()">
         <ion-icon name="add-circle"></ion-icon>
