--- a/src/pages/editprofile/editprofile.html
+++ b/src/pages/editprofile/editprofile.html
@@ -1,10 +1,36 @@
 <ion-header>
   <ion-navbar>
-    <ion-title><div align="center"><p style="color:white">Edit Profile</p></div></ion-title>
+    <ion-title><div align="center"><p style="color:black;margin-left:-10px">Edit Profile</p></div></ion-title>
   </ion-navbar>
 </ion-header>
 
 
 <ion-content padding>
+
+  <ion-card style="border-radius:12px 12px;padding:10px">
+    <div align="center" (click)="presentActionSheet()">
+  <img *ngIf="profile_picture != undefined || profile_picture != 'undefined' || profile_picture != null || profile_picture != 'null'" src="{{profile_picture}}" style="width:27%">   <!-- <ion-avatar *ngIf="profile_picture != undefined || profile_picture != 'undefined' || profile_picture != null || profile_picture != 'null'">-->
+    <img *ngIf="profile_picture === '' || profile_picture === undefined || profile_picture === 'undefined' || profile_picture === null || profile_picture === 'null'" src="imgs/profilepic1.png" style="width: 27%;"/>
+    <p style="color:black;margin-top: 3%;">Change picture</p>
+    </div>
+  </ion-card>
+
+
+  <ion-card style="border-radius:12px 12px;padding:15px">
+    <ion-item>
+        <ion-label floating>Name</ion-label>
+        <ion-input type="text" [(ngModel)]="name"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>Email</ion-label>
+        <ion-input type="text" [(ngModel)]="email"></ion-input>
+      </ion-item>
+  </ion-card>
+
+
+      <div align="center">
+        <button ion-button full round style="width:75%" (click)="signup()">Update</button>
+      </div>
 
 </ion-content>
