--- a/src/pages/bookie-offer/bookie-offer.html
+++ b/src/pages/bookie-offer/bookie-offer.html
@@ -3,19 +3,18 @@
       <button ion-button icon-only menuToggle>
           <ion-icon name="ios-menu-outline"></ion-icon>
         </button>
-    <ion-title>bookie-offer</ion-title>
+    <ion-title><div align="center"><p style="margin-left:-25px">Bookie Offer</p></div></ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content class="card-background-page" no-padding>
-
+<ion-content style="background-color:white" padding>
   <div *ngFor="let post of posts">
     <ion-card>
-      <img src="{{post.image}}"/>
-      <div class="card-title">{{post.title}}</div>
+      <img src="{{post.bg_img}}"/>
+      <div align="center" class="card-title"><b>{{post.title}}</b></div>
+      <div align="center" (click)="view_offer(post.url)"><p style="color:blue">View Offer</p></div>
     </ion-card>
   </div>
-
 </ion-content>
