--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -31,8 +31,8 @@
     <ion-item *ngFor="let chat of chats" no-lines>
 
       <div class="chat-status" text-center *ngIf="chat.type==='join'||chat.type==='exit';else message">
-        <span class="chat-date">{{chat.sendDate | date:'short'}}</span>
-        <span class="chat-content-center">{{chat.message}}</span>
+        <!-- <span class="chat-date"></span>
+        <span class="chat-content-center"></span> -->
       </div>
       <ng-template #message>
 
@@ -67,8 +67,8 @@
         <div class="chat-message" text-left *ngIf="chat.user !== nickname">
           <div class="left-bubble">
             <span class="msg-name" align="left">{{chat.user}}</span>
-            <p *ngIf="!chat.voice && !chat.image" align="left" text-wrap>{{chat.message}}</p>
-            <span class="msg-date" style="margin-top:-5px">{{chat.dater}}</span>
+            <p *ngIf="!chat.voice && !chat.image" align="left" text-wrap style="color:white">{{chat.message}}</p>
+            <span class="msg-date" style="color:white;margin-top:-5px">{{chat.dater}}</span>
             
             <!-- <div *ngIf="chat.voice">
                 <div align="left">
