--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -3,7 +3,7 @@
       <button ion-button icon-only menuToggle>
           <ion-icon name="ios-menu-outline"></ion-icon>
         </button>
-    <ion-title>contact</ion-title>
+        <ion-title><div align="center"><p style="margin-left:-25px">Contact US</p></div></ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -48,11 +48,11 @@
 </ion-content>
 
 <ion-footer>
-    <ion-segment [(ngModel)]="pet">
-        <ion-segment-button value="email">
+    <ion-segment style="background-color:black" [(ngModel)]="pet">
+        <ion-segment-button style="color:white" value="email">
           Email
         </ion-segment-button>
-        <ion-segment-button value="call">
+        <ion-segment-button style="color:white" value="call">
           Call
         </ion-segment-button>
       </ion-segment>
