--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -3,34 +3,21 @@
       <button ion-button icon-only menuToggle>
           <ion-icon name="ios-menu-outline"></ion-icon>
         </button>
-    <ion-title>Events</ion-title>
+        <ion-title><div align="center"><p style="margin-left:-25px">Events</p></div></ion-title>
   </ion-navbar>
 </ion-header>
-
-
-<!-- <ion-content>
-
-  <ion-grid>
-    <ion-row>
-      <ion-col col-4 *ngFor="let post of posts">
-        <img src="{{post.image}}"/>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-
-</ion-content> -->
 
 <ion-content>
 
     <ion-card *ngFor="let post of posts">
 
         <div>
-          <img src="{{post.image}}" />
+          <img src="{{post.event_img}}" />
         </div>
   
         <ion-card-content>
           <ion-card-title>
-              <div class="card-title" align="center">{{post.title}}</div>
+              <div class="card-title" align="center">{{post.event_name}}</div>
           </ion-card-title>
           <p>
             {{post.description}}
@@ -45,7 +32,7 @@
             <ion-col col-6>
               <button ion-button clear small color="danger" icon-start>
                 <ion-icon name='ios-pricetags-outline'></ion-icon>
-                {{post.event_time}}
+                {{post.time}}
               </button>
             </ion-col>
          
@@ -53,7 +40,7 @@
           <ion-col text-right col-6>
             <button ion-button clear small color="danger" icon-start>
               <ion-icon name='ios-calendar-outline'></ion-icon>
-              {{post.event_date}}
+              {{post.date}}
             </button>
           </ion-col>
         </ion-row>
