--- a/src/pages/faq/faq.html
+++ b/src/pages/faq/faq.html
@@ -3,7 +3,7 @@
       <button ion-button icon-only menuToggle>
           <ion-icon name="ios-menu-outline"></ion-icon>
         </button>
-    <ion-title>faq</ion-title>
+        <ion-title><div align="center"><p style="margin-left:-25px">FAQ</p></div></ion-title>
   </ion-navbar>
 </ion-header>
 
