--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -58,7 +58,7 @@
             </div> -->
 
             <div *ngIf="chat.image">
-            <img src="{{chat.image}}" class="thumb-img" imageViewer/>
+            <img src="{{chat.image}}" style="width:35%" class="thumb-img" imageViewer/>
             </div>
 
           </div>
@@ -87,7 +87,7 @@
               </div> -->
 
               <div *ngIf="chat.image">
-                  <img src="{{chat.image}}" class="thumb-img" imageViewer/>
+                  <img src="{{chat.image}}" style="width:35%" class="thumb-img" imageViewer/>
                   </div>
 
           </div>
