--- a/src/pages/tispterprofile/tispterprofile.html
+++ b/src/pages/tispterprofile/tispterprofile.html
@@ -3,13 +3,13 @@
       <button ion-button icon-only menuToggle>
           <ion-icon name="ios-menu-outline"></ion-icon>
         </button>
-        <ion-title><div align="center"><p style="margin-left:-25px">Tipster Profile</p></div></ion-title>
+        <ion-title><div align="center"><p style="margin-left:-25px">Expert Profiles</p></div></ion-title>
   </ion-navbar>
 </ion-header>
 
 
 <ion-content>
-  <div id="profile-bg" [ngStyle]="{'background-image': 'url(' + imageUrl +')'}"></div>
+  <!-- <ion-card>
   <div id="content">
     <div id="profile-info">
       <img id="profile-image" src="imgs/profilepic1.png">
@@ -24,4 +24,20 @@
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco labori
     </p>
   </div>
+</ion-card> -->
+
+
+<ion-card *ngFor="let post of posts" class="checker">
+
+  <div style="padding-top:5px" align="center">
+    <img src="{{post.image}}" class="round-border"/>
+    <h2><b>{{post.name}}</b></h2>
+  </div>
+
+  <div style="padding:15px">
+    <p><b>About US</b></p>
+    <p>{{post.about_us}}</p>
+  </div>
+
+</ion-card>
 </ion-content>
