--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -26,12 +26,12 @@
  
 
     <div align="center">
-    <button ion-button round full style="width:75%;color:white;background-color:black" (click)="firebase_login()">Login</button>
+    <button ion-button round full style="width:75%;color:white;background-color:black" (click)="login()">Login</button>
   </div>
 
-  <div align="center" (click)="registerpage()">
+  <!-- <div align="center" (click)="registerpage()">
   <p>Don't have an account ? Click to Register</p>
-</div>
+</div> -->
 
   </div>
 
@@ -84,9 +84,9 @@
     <button ion-button round full style="width:75%;color:white;background-color:black" (click)="signup()">Register</button>
   </div>
 
-  <div align="center" (click)="loginpage()">
+  <!-- <div align="center" (click)="loginpage()">
   <p style="color:black">Already have an Account ? Click to Signin</p>
-  </div>
+  </div> -->
   </div>
 
   <div *ngIf="value === 3 || value === '3'">
