--- a/src/pages/adminchat/adminchat.html
+++ b/src/pages/adminchat/adminchat.html
@@ -58,7 +58,7 @@
           </div> -->
 
           <div *ngIf="chat.image">
-          <img src="{{chat.image}}" style="width:35%" class="thumb-img" imageViewer/>
+          <div align="center"><img src="{{chat.image}}" style="width:40%" class="thumb-img" imageViewer/></div>
           </div>
 
         </div>
@@ -87,7 +87,7 @@
             </div> -->
 
             <div *ngIf="chat.image">
-                <img src="{{chat.image}}" style="width:35%" class="thumb-img" imageViewer/>
+              <div align="center"> <img src="{{chat.image}}" style="width:40%" class="thumb-img" imageViewer/> </div>
                 </div>
 
         </div>
