--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -3,7 +3,7 @@
       <button ion-button icon-only menuToggle>
           <ion-icon name="ios-menu-outline"></ion-icon>
         </button>
-        <ion-title><div align="center"><p style="margin-left:-25px">Bookie Offer</p></div></ion-title>
+        <ion-title><div align="center"><p style="margin-left:-25px">Settings</p></div></ion-title>
   </ion-navbar>
 </ion-header>
 
