--- a/src/pages/paypal/paypal.html
+++ b/src/pages/paypal/paypal.html
@@ -1,34 +1,47 @@
 <ion-header>
-
   <ion-navbar>
-    <ion-title>Paypal Integration</ion-title>
+          <div align="center">
+            <p><b>End user license agreement</b></p>
+          </div>
+          <ion-buttons end>
+              <button ion-button (click)="close()"><p>Close</p></button>
+              </ion-buttons>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
-    <form name="paymentForm">
-        <ion-item>
-          <ion-label floating>Amount</ion-label>
-          <ion-input type="number" name="amount" [(ngModel)]="value1"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-label floating>Currency</ion-label>
-          <ion-select [(ngModel)]="value2" name="currency">
-            <ion-option value="{{currency}}" *ngFor="let currency of currencies">{{currency}}</ion-option>
-          </ion-select>
-        </ion-item>
-        <ion-item>
-          <ion-label floating>Description</ion-label>
-          <ion-input type="text" name="description" [(ngModel)]="value3"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-label floating>Intent</ion-label>
-          <ion-input type="text" name="intent" [(ngModel)]="value4"></ion-input>
-        </ion-item>
-        <p>
-          <button ion-button block color="secondary" (click)="transaction()">MAKE PAYMENT</button>
-        </p>
-    </form>
+    
+ 
+<p>Please read this EULA carefully, as it sets out the basis upon which we license the Software for use.
+By breaking the seal on the packaging of the Software, you agree to be bound by this EULA.If you do not agree to be bound by this EULA, you must delete the application.</p>
+<p><b>1.	Definitions</b></p>
+<p>1.1	Except to the extent expressly provided otherwise, in this EULA:</p>
+  <p>"Effective Date" means the date upon which the User gives the User's express consent to this EULA, following the issue of this EULA by the Licensor;</p>
+    <p>"EULA" means this end user licence agreement, including any amendments to this end user licence agreement from time to time;</p>
+      <p>"Force Majeure Event" means [an event, or a series of related events, that is outside the reasonable control of the party affected (including failures of the internet or any public telecommunications network, hacker attacks, denial of service attacks, virus or other malicious software attacks or infections, power failures, industrial disputes affecting any third party, changes to the law, disasters, explosions, fires, floods, riots, terrorist attacks and wars)];</p>
+        <p>"Intellectual Property Rights" means all intellectual property rights wherever in the world, whether registrable or unregistrable, registered or unregistered, including any application or right of application for such rights (and these "intellectual property rights" include copyright and related rights, database rights, confidential information, trade secrets, know-how, business names, trade names, trade marks, service marks, passing off rights, unfair competition rights, patents, petty patents, utility models, semi-conductor topography rights and rights in designs);</p>
+          <p>"Licensor" means Racing RoomLtd a company incorporated in England and Wales.</p>
+            <p>"Software" means the Racing Room Application;
+              <p>"Source Code" means the Software code in human-readable form or any part of the Software code in human-readable form, including code compiled to create the Software or decompiled from the Software, but excluding interpreted code comprised in the Software;
+                <p><b>2.	There is no tolerance for objectionable content or abusive users</b></p>
+                <p>2.1 	We will act on objectionable content reports within 24 hours by removing the content and ejecting the user who provided the offending content.</p>
+                  <p>2.2	Users can flag objectional content by reporting a group via the top right button in the group.</p>
+                    <p>2.3	We filter objectionable content via our admin panel</p>
+                      <p>2.4	Users who provide offending content will be removed from the group by our admin team</p>
+                      <p><b>3.	Term</b></p>
+<p>3.1	This EULA shall come into force immediately.</p>
+<p>3.2	This EULA shall continue in force indefinitely.</p>
+<p><b>4.	Licence</b></p>
+<p>4.1	The Licensor hereby grants to the User from the date of supply of the Software to the User to:</p>
+<p>(a)	install the Software</p>
+<p>4.2	The User may not sub-license</p> 
+<p><b>5.	Source Code</b></p>
+<p>5.1	Nothing in this EULA shall give to the User or any other person any right to access or use the Source Code or constitute any licence of the Source Code.</p>
+
+
+<!-- <div align="center">
+  <button ion-button round full style="width:75%;color:white;background-color:black" (click)="agree()">I Agree</button>
+</div> -->
+
 </ion-content>
